2014-08-19  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2014-08-19  Nick Clifton  <nickc@redhat.com>

	* msp430-sim.c: Move static hardware multiply support variables
	from here...
	* msp430-sim.h (msp430_cpu_state): ... into here ...
	* msp430-sim.c (get_op, put_op): ... and update references to use
	the msp430_cpu_state structure.

2014-08-15  Roland McGrath  <mcgrathr@google.com>

	* configure: Regenerate.
	* config.in: Regenerate.

2014-06-03  Nick Clifton  <nickc@redhat.com>

	* msp430-sim.c (get_op): Handle reads of low result register when
	in MAC mode.
	(put_op): Copy MAC result into result words.
	Handle writes to the low result register.

2014-05-12  DJ Delorie  <dj@redhat.com>

	* msp43-sim.c (sign_ext): Change to "long long" to support
	sign-extending 32-bit values.

2014-05-08  Nick Clifton  <nickc@redhat.com>

	* msp430-sim.c (sim_open): Do not allocate memory over the
	hardware multiply registers.
	(get_op): Add support for reads from the hardware multiply
	registers.
	(put_op): Add support for writes to the hardware multiply
	registers.
	(msp430_step_once): Add support for the RETI instruction used by
	the CPUX architecture.

2014-03-10  Mike Frysinger  <vapier@gentoo.org>

	* msp430-sim.c (sim_create_inferior): Set new_pc to the result of
	bfd_get_start_address when abfd is not NULL and new_pc is zero.

2014-03-10  Mike Frysinger  <vapier@gentoo.org>

	* msp430-sim (maybe_perform_syscall): Change %d to %ld.
	(msp430_step_once): Cast fprintf to fprintf_ftype.

2013-09-23  Alan Modra  <amodra@gmail.com>

	* aclocal.m4, configure: Regenerate.

2013-06-21  Nick Clifton  <nickc@redhat.com>

	* Makefile.in: New.
	* aclocal.m4: Generate.
	* config.in: Generate.
	* configure.ac: New.
	* configure: Generate.
	* msp430-sim.c: New.
	* msp430-sim.h: New.
	* sim-main.h: New.
	* trace.c: New.
	* trace.h: New.